<resources>
    <string name="app_name">Store App</string>
    <string name="app_title">Hola</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="password_again">Password again</string>
    <string name="sign_up">Sign up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="stock">Stock</string>
    <string name="transaction">Transaction</string>
    <string name="partner">Partner</string>
    <string name="account">Account</string>
    <string name="empty_username">please input username</string>
    <string name="minimum_username">"username minimum "</string>
    <string name="character">" character"</string>
    <string name="empty_password">"please input password"</string>
    <string name="minimum_password">"password minimum "</string>
    <string name="empty_confirm_password">"please input password again"</string>
    <string name="password_missmatch">"password missmatch"</string>
    <string name="empty_account_type">"please select account type"</string>
    <string name="success_create_account">"account created"</string>
    <string name="fail_create_account">"create account failed"</string>
    <string name="account_already_exist">"sorry, try another username"</string>
    <string name="connection_problem">"please check your connection"</string>
    <string name="empty_ktp">please input ktp</string>
    <string name="empty_phone">please input phone number</string>
    <string name="empty_email">please input e-mail</string>
    <string name="empty_address">please input full address</string>
    <string name="length_ktp">"ktp must be "</string>
</resources>
